[package]
name = "binance_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "time"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
dashmap = "5.4"
deadpool = { version = "0.9", features = ["managed"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
