[package]
name = "binance_websocket"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
futures-util = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
dashmap = "5.0.0"
# Remove deadpool if you're not using it
# deadpool = { version = "0.9", features = ["managed"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "1.0.0"  # Added for better error handling
rust_decimal = "1.0"  # Changed from hyphen to underscore
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
# Enable optimization in release mode
opt-level = 3
lto = true
codegen-units = 1
# panic = "abort"  # Uncomment if you want to optimize size further
